Debugging the SmallDB mechanism

--- a/examples/dummy_smalldb.ipynb
+++ b/examples/dummy_smalldb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fp = '20200811_QLD_dummy_dataset_individual_v2.xlsx'\n",
-    "df = pd.read_excel(fp)\n",
-    "df.drop([\"NOTF_ID\", \"LGA\", \"HHS\"] + list(df.columns[12:]), axis=1, inplace=True)\n",
+    "df = pd.DataFrame()\n",
+    "dummy = np.random.choice(np.arange(3), size=10000, p=[0.1,0.35,0.55]) \n",
+    "df[\"DUMMY\"] = dummy\n",
+    "\n",
+    "dummy2 = np.zeros(10000, dtype=np.int)\n",
+    "df[\"DUMMY2\"] = dummy2\n",
     "\n",
     "hist = Histogram(df)\n",
     "real_database = hist.get_db()"
@@ -31,49 +34,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import product\n",
-    "# _cols = [\"AGEGRP5\", \"SEX\", \"INDIG_STATUS\"]\n",
     "queries = []\n",
     "\n",
-    "# # this creates the queries for:\n",
-    "# # df.groupby([\"AGEGRP5\", \"SEX\", \"INDIG_STATUS\", col]).count()\n",
-    "# # where col is in [\"HOSPITALISED\", \"VENTILATED\", \"ICU\", \"DIED_OF_CONDITION\"]\n",
-    "# for col in [\"HOSPITALISED\", \"VENTILATED\", \"ICU\", \"DIED_OF_CONDITION\"]:\n",
-    "#     cols = _cols + [col,]\n",
-    "#     vals = product(*[list(hist.column_sets[hist.column_dict[c]]) for c in cols])\n",
-    "#     queries.extend(dict(zip(cols, val)) for val in vals)\n",
-    "\n",
-    "# # this creates the queries for:\n",
-    "# # df.groupby([\"ONSET_DATE\", \"AGEGRP5\", \"INDIG_STATUS\", \"SEX\"]).count()\n",
-    "# cols = [\"ONSET_DATE\", \"AGEGRP5\", \"INDIG_STATUS\", \"SEX\"]\n",
-    "# vals = product(*[list(hist.column_sets[hist.column_dict[c]]) for c in cols])\n",
-    "# queries.extend(dict(zip(cols, val)) for val in vals)\n",
-    "\n",
-    "# this creates the queries for:\n",
-    "# df.groupby([\"ONSET_DATE\", \"POSTCODE\"]).count()\n",
-    "cols = [\"ONSET_DATE\", \"POSTCODE\"]\n",
+    "cols = [\"DUMMY\"]\n",
     "vals = product(*[list(hist.column_sets[hist.column_dict[c]]) for c in cols])\n",
     "queries.extend(dict(zip(cols, val)) for val in vals)\n",
     "\n",
-    "queries = sps.vstack([hist.get_query_vector(q) for q in queries])"
+    "queries = sps.vstack([hist.get_query_vector(q) for q in queries])\n",
+    "\n",
+    "queries = np.array([[1,1,0],\n",
+    "                    [0,1,1],\n",
+    "                    [1,0,1]])\n",
+    "queries = sps.csr.csr_matrix(queries)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "smalldb = SmallDB(epsilon=4.0, data=real_database, alpha=0.1)"
+    "smalldb = SmallDB(epsilon=1.0, data=real_database, alpha=0.05)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,13 +83,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.4529 0.8999 0.6472]\n",
+      "[0.45583333 0.9        0.64416667]\n"
+     ]
+    }
+   ],
    "source": [
     "print(real_responses)\n",
     "print(synthetic_responses)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
