--- a/examples/crisper_smalldb.ipynb
+++ b/examples/crisper_smalldb.ipynb
@@ -23,15 +23,15 @@
    "source": [
     "fp = '20200811_QLD_dummy_dataset_individual_v2.xlsx'\n",
     "df = pd.read_excel(fp)\n",
-    "df.drop([\"NOTF_ID\", \"LGA\", \"HHS\"] + list(df.columns[12:]), axis=1, inplace=True)\n",
-    "\n",
+    "# df.drop([\"NOTF_ID\", \"LGA\", \"HHS\"] + list(df.columns[12:]), axis=1, inplace=True)\n",
+    "df.drop(list(df.columns[1:6]) + list(df.columns[7:]), axis=1, inplace=True)\n",
     "hist = Histogram(df)\n",
     "real_database = hist.get_db()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,11 +64,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "smalldb = SmallDB(epsilon=4.0, data=real_database, alpha=0.1)"
+    "smalldb = SmallDB(epsilon=0.001, data=real_database, alpha=0.1)"
    ]
   },
   {
@@ -105,6 +105,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "queries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -124,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
