Added a default precision for release mechanisms

--- a/examples/relm_demo.ipynb
+++ b/examples/relm_demo.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simple Mechanisms\n",
+    "## Basic Mechanisms\n",
     "Using RelM for basic differentially private release is fairly striaghtforward.\n",
     "For example, suppose that the database consists of records indicating the age group of each patient who received a COVID-19 test on 09 March, 2020.\n",
     "Each patient is classified as belonging to one of eight age groups: 0-9, 10-19, 20-29, 30-39, 40-49, 50-59, 60-69, and 70+.\n",
@@ -1114,7 +1114,7 @@
    "outputs": [],
    "source": [
     "from relm.mechanisms import ReportNoisyMax\n",
-    "mechanism = ReportNoisyMax(epsilon=1.0, precision=35)  \n",
+    "mechanism = ReportNoisyMax(epsilon=1.0)  \n",
     "index, perturbed_value = mechanism.release(values)"
    ]
   },
@@ -1136,7 +1136,7 @@
     "indices = np.zeros(TRIALS)\n",
     "perturbed_values = np.zeros(TRIALS)\n",
     "for i in range(TRIALS):\n",
-    "    mechanism = ReportNoisyMax(epsilon=0.1, precision=35)\n",
+    "    mechanism = ReportNoisyMax(epsilon=0.1)\n",
     "    indices[i], perturbed_values[i] = mechanism.release(values)"
    ]
   },
